--- a/style.css
+++ b/style.css
@@ -7,6 +7,90 @@
 --white-smoke: #f4f4f4ff;
 }
 
-h1{
-    color:var(--rose-taupe);
+*{
+    box-sizing: 0;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+
+body{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--white-smoke);
+
+}
+
+header, footer{
+    background-color: var(--pale-purple);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+h1{
+    color: var(--orchid-pink);
+}
+
+/* select the first image that is a first level child of main */
+
+main > img:nth-of-type(1){
+    width: 100%;
+    height: 50vw;
+    object-fit: cover;
+    max-height: 50vh;
+
+}
+
+header > p{
+    font-size: xx-large;
+    font-weight: bold;
+}
+
+nav a{
+    color: var(--old-rose);
+    font-size: smaller;
+    text-decoration: none;   
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.5rem;
+    border: 1px solid lightblue;
+}
+
+h1, p{
+    margin: 0.5rem 0;
+}
+
+
+nav a:hover{
+    color: #8b575cff;
+    background-color: aquamarine;
+}
+
+header{
+    
+    min-height: 15vh;
+    
+}
+
+header > p{
+    font-size: xx-large;
+    font-weight: bold;
+
+}
+
+nav{
+    font-size: smaller;
+    color: var(--old-rose)
+}
+
+main{
+    min-height: 83vh;
+    padding: 1rem;
+}
+
+footer{
+    min-height: 5vh;
+}
+
