--- a/style.css
+++ b/style.css
@@ -35,19 +35,25 @@ h1{
 }
 
 /* select the first image that is a first level child of main */
-
 main > img:nth-of-type(1){
     width: 100%;
-    height: 50vw;
-    object-fit: cover;
+    padding: 0 3rem;
+    height: 30vw;
     max-height: 50vh;
-
+    object-fit: cover;
 }
 
 header > p{
     font-size: xx-large;
     font-weight: bold;
 }
+
+#home main > img:nth-of-type(1){
+    padding: 0;
+    height: 50vw;
+
+}
+   
 
 nav a{
     color: var(--old-rose);
