--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
 }
 
 *{
-    box-sizing: 0;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 
